# TTEC-Gamacubedesign

./: .gitmodules  Casamento das antenas  README.md  testopencv.cpp
References/: Casamento das antenas  Códigos  Relatorio-antenas e frequência-TTEC-Gamacubedesign.docx  other-references.txt
libraries/: links, libraries and boards.txt
libraries/EbyteLib-v1/: EbyteLib.cpp  EbyteLib.h  configurations.cpp  configurations.h  debugging.h  definitions.h  modes.h
main/: CommunicationProtocol.h
main/GroundStation/: Control.cpp  Control.h  GSComm.cpp  GSComm.h  GroundStation.ino
main/GroundStationPy/: App.py  Control.py  GroundStation.py  Logger.py  Protocol.json  Protocol.py  SerialTransmission.py
main/Satellite/: DataFIFO.h  ImagingServer.cpp  Logger.cpp  Logger.h  Logger.out  Logger111.h  Makefile  RFModem.cpp  RFModem.h  RFModemOffline.cpp  RFModemOffline.h  RFModule.cpp  RFModule.h  SatTTC.cpp  SatTTC.out  SerialConsole.cpp  SerialConsole.h  StatusServer.cpp  Timing.cpp  a.out  asynchronous_in.cpp  helloworld.cpp  printing_utils.cpp  test.out  test_struct_formatting.cpp
main/Satellite/ImagingClient/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
other-useful-examples/GPSTest/: GPS.h  GPSTest.ino
sdr-gnuradio/: default.py  lora_RX.grc  lora_RX.py  testrtl.grc
src/EByteSystem/: CommunicationProtocol.h
src/LoRaSat/: BitCubeSatProtocol.cpp  BitCubeSatProtocol.h  LoRaSat.ino
src/SDR_LoRaRx/: SDR_LoRaRX.grc  SDR_Receiver.py  Telemetry.h  lib.txt  log.txt  testLORARE.py  testLORARE_epy_block_0.py
(+159 files in other folders)
